src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANNOTATION
    BOOLEAN_LITERAL
    CLASS
    DIFFERENTFROM
    DISJOINTWITH
    DOMAIN
    EQUIVALENTTO
    IMPORT
    INDIVIDUAL
    INSTANCE
    LPAREN
    MAIOR
    MAIORIGUAL
    MENOR
    MENORIGUAL
    NEW_DATATYPE
    ONTOLOGY
    PROPERTY
    RANGE
    RPAREN
    SAMEAS
    STRING
    SUBCLASSOF

Grammar

Rule 0     S' -> program
Rule 1     program -> package_declaration content_list
Rule 2     program -> package_declaration
Rule 3     package_declaration -> PACKAGE CLASS_NAME
Rule 4     package_declaration -> PACKAGE RELATION_NAME
Rule 5     content_list -> content_list content
Rule 6     content_list -> content
Rule 7     content -> class_declaration
Rule 8     content -> datatype_declaration
Rule 9     content -> enum_declaration
Rule 10    content -> genset_declaration
Rule 11    content -> relation_declaration
Rule 12    class_declaration -> EST_CLASS CLASS_NAME LBRACE class_body RBRACE
Rule 13    class_declaration -> EST_CLASS CLASS_NAME LBRACE RBRACE
Rule 14    class_declaration -> EST_CLASS CLASS_NAME SPECIALIZES CLASS_NAME
Rule 15    class_declaration -> EST_CLASS CLASS_NAME
Rule 16    class_body -> class_body_item
Rule 17    class_body -> class_body class_body_item
Rule 18    class_body_item -> attribute
Rule 19    class_body_item -> internal_relation
Rule 20    attribute -> RELATION_NAME COLON type
Rule 21    attribute -> RELATION_NAME COLON type metadata_block
Rule 22    attribute -> ID COLON type
Rule 23    attribute -> ID COLON type metadata_block
Rule 24    attribute -> NATIVE_NUMBER COLON type
Rule 25    attribute -> NATIVE_NUMBER COLON type metadata_block
Rule 26    type -> NATIVE_STRING
Rule 27    type -> NATIVE_NUMBER
Rule 28    type -> NATIVE_BOOLEAN
Rule 29    type -> NATIVE_DATE
Rule 30    type -> NATIVE_TIME
Rule 31    type -> NATIVE_DATETIME
Rule 32    type -> CLASS_NAME
Rule 33    type -> RELATION_NAME
Rule 34    type -> ID
Rule 35    metadata_block -> LBRACE metadata_list RBRACE
Rule 36    metadata_list -> metadata_item
Rule 37    metadata_list -> metadata_list metadata_item
Rule 38    metadata_item -> META_CONST
Rule 39    metadata_item -> META_ORDERED
Rule 40    metadata_item -> META_DERIVED
Rule 41    metadata_item -> META_SUBSETS
Rule 42    metadata_item -> META_REDEFINES
Rule 43    internal_relation -> ARROBA EST_REL cardinality relation_symbol cardinality CLASS_NAME
Rule 44    internal_relation -> EST_REL cardinality relation_symbol cardinality CLASS_NAME
Rule 45    datatype_declaration -> DATATYPE CLASS_NAME LBRACE attribute_list RBRACE
Rule 46    datatype_declaration -> DATATYPE CLASS_NAME LBRACE RBRACE
Rule 47    attribute_list -> attribute
Rule 48    attribute_list -> attribute_list attribute
Rule 49    enum_declaration -> ENUM CLASS_NAME LBRACE instance_list RBRACE
Rule 50    enum_declaration -> ENUM CLASS_NAME LBRACE RBRACE
Rule 51    instance_list -> CLASS_NAME
Rule 52    instance_list -> instance_list CLASS_NAME
Rule 53    genset_declaration -> modifiers GENSET CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
Rule 54    genset_declaration -> GENSET CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
Rule 55    genset_declaration -> GENSET CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE
Rule 56    genset_declaration -> modifiers GENSET CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE
Rule 57    modifiers -> DISJOINT COMPLETE
Rule 58    modifiers -> COMPLETE DISJOINT
Rule 59    modifiers -> DISJOINT
Rule 60    modifiers -> COMPLETE
Rule 61    class_list -> CLASS_NAME
Rule 62    class_list -> class_list COMMA CLASS_NAME
Rule 63    relation_declaration -> ARROBA EST_REL RELATION CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME
Rule 64    relation_declaration -> RELATION CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME
Rule 65    relation_declaration -> RELATION CLASS_NAME cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
Rule 66    relation_declaration -> CLASS_NAME cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
Rule 67    cardinality -> LBRACKET NUMBER DOT DOT ASTERISCO RBRACKET
Rule 68    cardinality -> LBRACKET NUMBER RBRACKET
Rule 69    cardinality -> LBRACKET NUMBER DOT DOT NUMBER RBRACKET
Rule 70    cardinality -> LBRACKET ASTERISCO RBRACKET
Rule 71    relation_symbol -> HYPHEN HYPHEN
Rule 72    relation_symbol -> CONTEM
Rule 73    relation_symbol -> CONTIDO

Terminals, with rules where they appear

ANNOTATION           : 
ARROBA               : 43 63
ASTERISCO            : 67 70
BOOLEAN_LITERAL      : 
CLASS                : 
CLASS_NAME           : 3 12 13 14 14 15 32 43 44 45 46 49 50 51 52 53 53 54 54 55 55 56 56 61 62 63 63 64 64 65 65 66 66
COLON                : 20 21 22 23 24 25
COMMA                : 62
COMPLETE             : 57 58 60
CONTEM               : 72
CONTIDO              : 73
DATATYPE             : 45 46
DIFFERENTFROM        : 
DISJOINT             : 57 58 59
DISJOINTWITH         : 
DOMAIN               : 
DOT                  : 67 67 69 69
ENUM                 : 49 50
EQUIVALENTTO         : 
EST_CLASS            : 12 13 14 15
EST_REL              : 43 44 63
GENERAL              : 55 56
GENSET               : 53 54 55 56
HYPHEN               : 71 71
ID                   : 22 23 34
IMPORT               : 
INDIVIDUAL           : 
INSTANCE             : 
LBRACE               : 12 13 35 45 46 49 50 55 56
LBRACKET             : 67 68 69 70
LPAREN               : 
MAIOR                : 
MAIORIGUAL           : 
MENOR                : 
MENORIGUAL           : 
META_CONST           : 38
META_DERIVED         : 40
META_ORDERED         : 39
META_REDEFINES       : 42
META_SUBSETS         : 41
NATIVE_BOOLEAN       : 28
NATIVE_DATE          : 29
NATIVE_DATETIME      : 31
NATIVE_NUMBER        : 24 25 27
NATIVE_STRING        : 26
NATIVE_TIME          : 30
NEW_DATATYPE         : 
NUMBER               : 67 68 69 69
ONTOLOGY             : 
PACKAGE              : 3 4
PROPERTY             : 
RANGE                : 
RBRACE               : 12 13 35 45 46 49 50 55 56
RBRACKET             : 67 68 69 70
RELATION             : 63 64 65
RELATION_NAME        : 4 20 21 33 65 66
RPAREN               : 
SAMEAS               : 
SPECIALIZES          : 14 53 54
SPECIFICS            : 55 56
STRING               : 
SUBCLASSOF           : 
WHERE                : 53 54
error                : 

Nonterminals, with rules where they appear

attribute            : 18 47 48
attribute_list       : 45 48
cardinality          : 43 43 44 44 63 63 64 64 65 65 66 66
class_body           : 12 17
class_body_item      : 16 17
class_declaration    : 7
class_list           : 53 54 55 56 62
content              : 5 6
content_list         : 1 5
datatype_declaration : 8
enum_declaration     : 9
genset_declaration   : 10
instance_list        : 49 52
internal_relation    : 19
metadata_block       : 21 23 25
metadata_item        : 36 37
metadata_list        : 35 37
modifiers            : 53 56
package_declaration  : 1 2
program              : 0
relation_declaration : 11
relation_symbol      : 43 44 63 64 65 65 66 66
type                 : 20 21 22 23 24 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . package_declaration content_list
    (2) program -> . package_declaration
    (3) package_declaration -> . PACKAGE CLASS_NAME
    (4) package_declaration -> . PACKAGE RELATION_NAME

    PACKAGE         shift and go to state 3

    program                        shift and go to state 1
    package_declaration            shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> package_declaration . content_list
    (2) program -> package_declaration .
    (5) content_list -> . content_list content
    (6) content_list -> . content
    (7) content -> . class_declaration
    (8) content -> . datatype_declaration
    (9) content -> . enum_declaration
    (10) content -> . genset_declaration
    (11) content -> . relation_declaration
    (12) class_declaration -> . EST_CLASS CLASS_NAME LBRACE class_body RBRACE
    (13) class_declaration -> . EST_CLASS CLASS_NAME LBRACE RBRACE
    (14) class_declaration -> . EST_CLASS CLASS_NAME SPECIALIZES CLASS_NAME
    (15) class_declaration -> . EST_CLASS CLASS_NAME
    (45) datatype_declaration -> . DATATYPE CLASS_NAME LBRACE attribute_list RBRACE
    (46) datatype_declaration -> . DATATYPE CLASS_NAME LBRACE RBRACE
    (49) enum_declaration -> . ENUM CLASS_NAME LBRACE instance_list RBRACE
    (50) enum_declaration -> . ENUM CLASS_NAME LBRACE RBRACE
    (53) genset_declaration -> . modifiers GENSET CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
    (54) genset_declaration -> . GENSET CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
    (55) genset_declaration -> . GENSET CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE
    (56) genset_declaration -> . modifiers GENSET CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE
    (63) relation_declaration -> . ARROBA EST_REL RELATION CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME
    (64) relation_declaration -> . RELATION CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME
    (65) relation_declaration -> . RELATION CLASS_NAME cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
    (66) relation_declaration -> . CLASS_NAME cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
    (57) modifiers -> . DISJOINT COMPLETE
    (58) modifiers -> . COMPLETE DISJOINT
    (59) modifiers -> . DISJOINT
    (60) modifiers -> . COMPLETE

    $end            reduce using rule 2 (program -> package_declaration .)
    EST_CLASS       shift and go to state 11
    DATATYPE        shift and go to state 13
    ENUM            shift and go to state 14
    GENSET          shift and go to state 16
    ARROBA          shift and go to state 17
    RELATION        shift and go to state 18
    CLASS_NAME      shift and go to state 12
    DISJOINT        shift and go to state 19
    COMPLETE        shift and go to state 20

    content_list                   shift and go to state 4
    content                        shift and go to state 5
    class_declaration              shift and go to state 6
    datatype_declaration           shift and go to state 7
    enum_declaration               shift and go to state 8
    genset_declaration             shift and go to state 9
    relation_declaration           shift and go to state 10
    modifiers                      shift and go to state 15

state 3

    (3) package_declaration -> PACKAGE . CLASS_NAME
    (4) package_declaration -> PACKAGE . RELATION_NAME

    CLASS_NAME      shift and go to state 21
    RELATION_NAME   shift and go to state 22


state 4

    (1) program -> package_declaration content_list .
    (5) content_list -> content_list . content
    (7) content -> . class_declaration
    (8) content -> . datatype_declaration
    (9) content -> . enum_declaration
    (10) content -> . genset_declaration
    (11) content -> . relation_declaration
    (12) class_declaration -> . EST_CLASS CLASS_NAME LBRACE class_body RBRACE
    (13) class_declaration -> . EST_CLASS CLASS_NAME LBRACE RBRACE
    (14) class_declaration -> . EST_CLASS CLASS_NAME SPECIALIZES CLASS_NAME
    (15) class_declaration -> . EST_CLASS CLASS_NAME
    (45) datatype_declaration -> . DATATYPE CLASS_NAME LBRACE attribute_list RBRACE
    (46) datatype_declaration -> . DATATYPE CLASS_NAME LBRACE RBRACE
    (49) enum_declaration -> . ENUM CLASS_NAME LBRACE instance_list RBRACE
    (50) enum_declaration -> . ENUM CLASS_NAME LBRACE RBRACE
    (53) genset_declaration -> . modifiers GENSET CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
    (54) genset_declaration -> . GENSET CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
    (55) genset_declaration -> . GENSET CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE
    (56) genset_declaration -> . modifiers GENSET CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE
    (63) relation_declaration -> . ARROBA EST_REL RELATION CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME
    (64) relation_declaration -> . RELATION CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME
    (65) relation_declaration -> . RELATION CLASS_NAME cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
    (66) relation_declaration -> . CLASS_NAME cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
    (57) modifiers -> . DISJOINT COMPLETE
    (58) modifiers -> . COMPLETE DISJOINT
    (59) modifiers -> . DISJOINT
    (60) modifiers -> . COMPLETE

    $end            reduce using rule 1 (program -> package_declaration content_list .)
    EST_CLASS       shift and go to state 11
    DATATYPE        shift and go to state 13
    ENUM            shift and go to state 14
    GENSET          shift and go to state 16
    ARROBA          shift and go to state 17
    RELATION        shift and go to state 18
    CLASS_NAME      shift and go to state 12
    DISJOINT        shift and go to state 19
    COMPLETE        shift and go to state 20

    content                        shift and go to state 23
    class_declaration              shift and go to state 6
    datatype_declaration           shift and go to state 7
    enum_declaration               shift and go to state 8
    genset_declaration             shift and go to state 9
    relation_declaration           shift and go to state 10
    modifiers                      shift and go to state 15

state 5

    (6) content_list -> content .

    EST_CLASS       reduce using rule 6 (content_list -> content .)
    DATATYPE        reduce using rule 6 (content_list -> content .)
    ENUM            reduce using rule 6 (content_list -> content .)
    GENSET          reduce using rule 6 (content_list -> content .)
    ARROBA          reduce using rule 6 (content_list -> content .)
    RELATION        reduce using rule 6 (content_list -> content .)
    CLASS_NAME      reduce using rule 6 (content_list -> content .)
    DISJOINT        reduce using rule 6 (content_list -> content .)
    COMPLETE        reduce using rule 6 (content_list -> content .)
    $end            reduce using rule 6 (content_list -> content .)


state 6

    (7) content -> class_declaration .

    EST_CLASS       reduce using rule 7 (content -> class_declaration .)
    DATATYPE        reduce using rule 7 (content -> class_declaration .)
    ENUM            reduce using rule 7 (content -> class_declaration .)
    GENSET          reduce using rule 7 (content -> class_declaration .)
    ARROBA          reduce using rule 7 (content -> class_declaration .)
    RELATION        reduce using rule 7 (content -> class_declaration .)
    CLASS_NAME      reduce using rule 7 (content -> class_declaration .)
    DISJOINT        reduce using rule 7 (content -> class_declaration .)
    COMPLETE        reduce using rule 7 (content -> class_declaration .)
    $end            reduce using rule 7 (content -> class_declaration .)


state 7

    (8) content -> datatype_declaration .

    EST_CLASS       reduce using rule 8 (content -> datatype_declaration .)
    DATATYPE        reduce using rule 8 (content -> datatype_declaration .)
    ENUM            reduce using rule 8 (content -> datatype_declaration .)
    GENSET          reduce using rule 8 (content -> datatype_declaration .)
    ARROBA          reduce using rule 8 (content -> datatype_declaration .)
    RELATION        reduce using rule 8 (content -> datatype_declaration .)
    CLASS_NAME      reduce using rule 8 (content -> datatype_declaration .)
    DISJOINT        reduce using rule 8 (content -> datatype_declaration .)
    COMPLETE        reduce using rule 8 (content -> datatype_declaration .)
    $end            reduce using rule 8 (content -> datatype_declaration .)


state 8

    (9) content -> enum_declaration .

    EST_CLASS       reduce using rule 9 (content -> enum_declaration .)
    DATATYPE        reduce using rule 9 (content -> enum_declaration .)
    ENUM            reduce using rule 9 (content -> enum_declaration .)
    GENSET          reduce using rule 9 (content -> enum_declaration .)
    ARROBA          reduce using rule 9 (content -> enum_declaration .)
    RELATION        reduce using rule 9 (content -> enum_declaration .)
    CLASS_NAME      reduce using rule 9 (content -> enum_declaration .)
    DISJOINT        reduce using rule 9 (content -> enum_declaration .)
    COMPLETE        reduce using rule 9 (content -> enum_declaration .)
    $end            reduce using rule 9 (content -> enum_declaration .)


state 9

    (10) content -> genset_declaration .

    EST_CLASS       reduce using rule 10 (content -> genset_declaration .)
    DATATYPE        reduce using rule 10 (content -> genset_declaration .)
    ENUM            reduce using rule 10 (content -> genset_declaration .)
    GENSET          reduce using rule 10 (content -> genset_declaration .)
    ARROBA          reduce using rule 10 (content -> genset_declaration .)
    RELATION        reduce using rule 10 (content -> genset_declaration .)
    CLASS_NAME      reduce using rule 10 (content -> genset_declaration .)
    DISJOINT        reduce using rule 10 (content -> genset_declaration .)
    COMPLETE        reduce using rule 10 (content -> genset_declaration .)
    $end            reduce using rule 10 (content -> genset_declaration .)


state 10

    (11) content -> relation_declaration .

    EST_CLASS       reduce using rule 11 (content -> relation_declaration .)
    DATATYPE        reduce using rule 11 (content -> relation_declaration .)
    ENUM            reduce using rule 11 (content -> relation_declaration .)
    GENSET          reduce using rule 11 (content -> relation_declaration .)
    ARROBA          reduce using rule 11 (content -> relation_declaration .)
    RELATION        reduce using rule 11 (content -> relation_declaration .)
    CLASS_NAME      reduce using rule 11 (content -> relation_declaration .)
    DISJOINT        reduce using rule 11 (content -> relation_declaration .)
    COMPLETE        reduce using rule 11 (content -> relation_declaration .)
    $end            reduce using rule 11 (content -> relation_declaration .)


state 11

    (12) class_declaration -> EST_CLASS . CLASS_NAME LBRACE class_body RBRACE
    (13) class_declaration -> EST_CLASS . CLASS_NAME LBRACE RBRACE
    (14) class_declaration -> EST_CLASS . CLASS_NAME SPECIALIZES CLASS_NAME
    (15) class_declaration -> EST_CLASS . CLASS_NAME

    CLASS_NAME      shift and go to state 24


state 12

    (66) relation_declaration -> CLASS_NAME . cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
    (67) cardinality -> . LBRACKET NUMBER DOT DOT ASTERISCO RBRACKET
    (68) cardinality -> . LBRACKET NUMBER RBRACKET
    (69) cardinality -> . LBRACKET NUMBER DOT DOT NUMBER RBRACKET
    (70) cardinality -> . LBRACKET ASTERISCO RBRACKET

    LBRACKET        shift and go to state 26

    cardinality                    shift and go to state 25

state 13

    (45) datatype_declaration -> DATATYPE . CLASS_NAME LBRACE attribute_list RBRACE
    (46) datatype_declaration -> DATATYPE . CLASS_NAME LBRACE RBRACE

    CLASS_NAME      shift and go to state 27


state 14

    (49) enum_declaration -> ENUM . CLASS_NAME LBRACE instance_list RBRACE
    (50) enum_declaration -> ENUM . CLASS_NAME LBRACE RBRACE

    CLASS_NAME      shift and go to state 28


state 15

    (53) genset_declaration -> modifiers . GENSET CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
    (56) genset_declaration -> modifiers . GENSET CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE

    GENSET          shift and go to state 29


state 16

    (54) genset_declaration -> GENSET . CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
    (55) genset_declaration -> GENSET . CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE

    CLASS_NAME      shift and go to state 30


state 17

    (63) relation_declaration -> ARROBA . EST_REL RELATION CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME

    EST_REL         shift and go to state 31


state 18

    (64) relation_declaration -> RELATION . CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME
    (65) relation_declaration -> RELATION . CLASS_NAME cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME

    CLASS_NAME      shift and go to state 32


state 19

    (57) modifiers -> DISJOINT . COMPLETE
    (59) modifiers -> DISJOINT .

    COMPLETE        shift and go to state 33
    GENSET          reduce using rule 59 (modifiers -> DISJOINT .)


state 20

    (58) modifiers -> COMPLETE . DISJOINT
    (60) modifiers -> COMPLETE .

    DISJOINT        shift and go to state 34
    GENSET          reduce using rule 60 (modifiers -> COMPLETE .)


state 21

    (3) package_declaration -> PACKAGE CLASS_NAME .

    EST_CLASS       reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    DATATYPE        reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    ENUM            reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    GENSET          reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    ARROBA          reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    RELATION        reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    CLASS_NAME      reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    DISJOINT        reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    COMPLETE        reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)
    $end            reduce using rule 3 (package_declaration -> PACKAGE CLASS_NAME .)


state 22

    (4) package_declaration -> PACKAGE RELATION_NAME .

    EST_CLASS       reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    DATATYPE        reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    ENUM            reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    GENSET          reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    ARROBA          reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    RELATION        reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    CLASS_NAME      reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    DISJOINT        reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    COMPLETE        reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)
    $end            reduce using rule 4 (package_declaration -> PACKAGE RELATION_NAME .)


state 23

    (5) content_list -> content_list content .

    EST_CLASS       reduce using rule 5 (content_list -> content_list content .)
    DATATYPE        reduce using rule 5 (content_list -> content_list content .)
    ENUM            reduce using rule 5 (content_list -> content_list content .)
    GENSET          reduce using rule 5 (content_list -> content_list content .)
    ARROBA          reduce using rule 5 (content_list -> content_list content .)
    RELATION        reduce using rule 5 (content_list -> content_list content .)
    CLASS_NAME      reduce using rule 5 (content_list -> content_list content .)
    DISJOINT        reduce using rule 5 (content_list -> content_list content .)
    COMPLETE        reduce using rule 5 (content_list -> content_list content .)
    $end            reduce using rule 5 (content_list -> content_list content .)


state 24

    (12) class_declaration -> EST_CLASS CLASS_NAME . LBRACE class_body RBRACE
    (13) class_declaration -> EST_CLASS CLASS_NAME . LBRACE RBRACE
    (14) class_declaration -> EST_CLASS CLASS_NAME . SPECIALIZES CLASS_NAME
    (15) class_declaration -> EST_CLASS CLASS_NAME .

    LBRACE          shift and go to state 35
    SPECIALIZES     shift and go to state 36
    EST_CLASS       reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    DATATYPE        reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    ENUM            reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    GENSET          reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    ARROBA          reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    RELATION        reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    CLASS_NAME      reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    DISJOINT        reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    COMPLETE        reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)
    $end            reduce using rule 15 (class_declaration -> EST_CLASS CLASS_NAME .)


state 25

    (66) relation_declaration -> CLASS_NAME cardinality . relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
    (71) relation_symbol -> . HYPHEN HYPHEN
    (72) relation_symbol -> . CONTEM
    (73) relation_symbol -> . CONTIDO

    HYPHEN          shift and go to state 38
    CONTEM          shift and go to state 39
    CONTIDO         shift and go to state 40

    relation_symbol                shift and go to state 37

state 26

    (67) cardinality -> LBRACKET . NUMBER DOT DOT ASTERISCO RBRACKET
    (68) cardinality -> LBRACKET . NUMBER RBRACKET
    (69) cardinality -> LBRACKET . NUMBER DOT DOT NUMBER RBRACKET
    (70) cardinality -> LBRACKET . ASTERISCO RBRACKET

    NUMBER          shift and go to state 41
    ASTERISCO       shift and go to state 42


state 27

    (45) datatype_declaration -> DATATYPE CLASS_NAME . LBRACE attribute_list RBRACE
    (46) datatype_declaration -> DATATYPE CLASS_NAME . LBRACE RBRACE

    LBRACE          shift and go to state 43


state 28

    (49) enum_declaration -> ENUM CLASS_NAME . LBRACE instance_list RBRACE
    (50) enum_declaration -> ENUM CLASS_NAME . LBRACE RBRACE

    LBRACE          shift and go to state 44


state 29

    (53) genset_declaration -> modifiers GENSET . CLASS_NAME WHERE class_list SPECIALIZES CLASS_NAME
    (56) genset_declaration -> modifiers GENSET . CLASS_NAME LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE

    CLASS_NAME      shift and go to state 45


state 30

    (54) genset_declaration -> GENSET CLASS_NAME . WHERE class_list SPECIALIZES CLASS_NAME
    (55) genset_declaration -> GENSET CLASS_NAME . LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE

    WHERE           shift and go to state 46
    LBRACE          shift and go to state 47


state 31

    (63) relation_declaration -> ARROBA EST_REL . RELATION CLASS_NAME cardinality relation_symbol cardinality CLASS_NAME

    RELATION        shift and go to state 48


state 32

    (64) relation_declaration -> RELATION CLASS_NAME . cardinality relation_symbol cardinality CLASS_NAME
    (65) relation_declaration -> RELATION CLASS_NAME . cardinality relation_symbol RELATION_NAME relation_symbol cardinality CLASS_NAME
    (67) cardinality -> . LBRACKET NUMBER DOT DOT ASTERISCO RBRACKET
    (68) cardinality -> . LBRACKET NUMBER RBRACKET
    (69) cardinality -> . LBRACKET NUMBER DOT DOT NUMBER RBRACKET
    (70) cardinality -> . LBRACKET ASTERISCO RBRACKET

    LBRACKET        shift and go to state 26

    cardinality                    shift and go to state 49

state 33

    (57) modifiers -> DISJOINT COMPLETE .

    GENSET          reduce using rule 57 (modifiers -> DISJOINT COMPLETE .)


state 34

    (58) modifiers -> COMPLETE DISJOINT .

    GENSET          reduce using rule 58 (modifiers -> COMPLETE DISJOINT .)


state 35

    (12) class_declaration -> EST_CLASS CLASS_NAME LBRACE . class_body RBRACE
    (13) class_declaration -> EST_CLASS CLASS_NAME LBRACE . RBRACE
    (16) class_body -> . class_body_item
    (17) class_body -> . class_body class_body_item
    (18) class_body_item -> . attribute
    (19) class_body_item -> . internal_relation
    (20) attribute -> . RELATION_NAME COLON type
    (21) attribute -> . RELATION_NAME COLON type metadata_block
    (22) attribute -> . ID COLON type
    (23) attribute -> . ID COLON type metadata_block
    (24) attribute -> . NATIVE_NUMBER COLON type
    (25) attribute -> . NATIVE_NUMBER COLON type metadata_block
    (43) internal_relation -> . ARROBA EST_REL cardinality relation_symbol cardinality CLASS_NAME
    (44) internal_relation -> . EST_REL cardinality relation_symbol cardinality CLASS_NAME

    RBRACE          shift and go to state 51
    RELATION_NAME   shift and go to state 55
    ID              shift and go to state 56
    NATIVE_NUMBER   shift and go to state 57
    ARROBA          shift and go to state 58
    EST_REL         shift and go to state 59

    class_body                     shift and go to state 50
    class_body_item                shift and go to state 52
    attribute                      shift and go to state 53
    internal_relation              shift and go to state 54

state 36

    (14) class_declaration -> EST_CLASS CLASS_NAME SPECIALIZES . CLASS_NAME

    CLASS_NAME      shift and go to state 60


state 37

    (66) relation_declaration -> CLASS_NAME cardinality relation_symbol . RELATION_NAME relation_symbol cardinality CLASS_NAME

    RELATION_NAME   shift and go to state 61


state 38

    (71) relation_symbol -> HYPHEN . HYPHEN

    HYPHEN          shift and go to state 62


state 39

    (72) relation_symbol -> CONTEM .

    RELATION_NAME   reduce using rule 72 (relation_symbol -> CONTEM .)
    LBRACKET        reduce using rule 72 (relation_symbol -> CONTEM .)


state 40

    (73) relation_symbol -> CONTIDO .

    RELATION_NAME   reduce using rule 73 (relation_symbol -> CONTIDO .)
    LBRACKET        reduce using rule 73 (relation_symbol -> CONTIDO .)


state 41

    (67) cardinality -> LBRACKET NUMBER . DOT DOT ASTERISCO RBRACKET
    (68) cardinality -> LBRACKET NUMBER . RBRACKET
    (69) cardinality -> LBRACKET NUMBER . DOT DOT NUMBER RBRACKET

    DOT             shift and go to state 63
    RBRACKET        shift and go to state 64


state 42

    (70) cardinality -> LBRACKET ASTERISCO . RBRACKET

    RBRACKET        shift and go to state 65


state 43

    (45) datatype_declaration -> DATATYPE CLASS_NAME LBRACE . attribute_list RBRACE
    (46) datatype_declaration -> DATATYPE CLASS_NAME LBRACE . RBRACE
    (47) attribute_list -> . attribute
    (48) attribute_list -> . attribute_list attribute
    (20) attribute -> . RELATION_NAME COLON type
    (21) attribute -> . RELATION_NAME COLON type metadata_block
    (22) attribute -> . ID COLON type
    (23) attribute -> . ID COLON type metadata_block
    (24) attribute -> . NATIVE_NUMBER COLON type
    (25) attribute -> . NATIVE_NUMBER COLON type metadata_block

    RBRACE          shift and go to state 67
    RELATION_NAME   shift and go to state 55
    ID              shift and go to state 56
    NATIVE_NUMBER   shift and go to state 57

    attribute_list                 shift and go to state 66
    attribute                      shift and go to state 68

state 44

    (49) enum_declaration -> ENUM CLASS_NAME LBRACE . instance_list RBRACE
    (50) enum_declaration -> ENUM CLASS_NAME LBRACE . RBRACE
    (51) instance_list -> . CLASS_NAME
    (52) instance_list -> . instance_list CLASS_NAME

    RBRACE          shift and go to state 71
    CLASS_NAME      shift and go to state 69

    instance_list                  shift and go to state 70

state 45

    (53) genset_declaration -> modifiers GENSET CLASS_NAME . WHERE class_list SPECIALIZES CLASS_NAME
    (56) genset_declaration -> modifiers GENSET CLASS_NAME . LBRACE GENERAL CLASS_NAME SPECIFICS class_list RBRACE

    WHERE           shift and go to state 72
    LBRACE          shift and go to state 73


state 46
